Changelog for Poi
=================


1.2.6 (unreleased)
------------------

- Issue workflow: acquire permission settings of 'Modify portal
  content' from higher level: when you can edit a tracker you can edit
  its issues as well.
  [maurits]

- Protect the edit button of an issue with the 'Manage portal content'
  permission instead of the non-existing 'Manage Portal Content' with
  capital letters...
  [maurits]

- Fixed bug where a text/html response added using kupu (needs a
  change in config.py) was not accepted.
  Fixes http://plone.org/products/poi/issues/224
  [maurits]

- When creating a tracker as non-manager you used to become only Owner
  and not Manager, which is not what we want.  Fixed this and a few
  other possible errors (like loosing other local roles) in setting
  the managers.
  Fixes http://plone.org/products/poi/issues/218
  [maurits]

- Catch and log SMTPExceptions when sending an email fails.
  Fixes http://plone.org/products/poi/issues/223
  [maurits]

- Uploading a file in an issue could fail needlessly due to a
  translation error while validating.  Fixes UnicodeDecodeError at
  http://plone.org/products/poi/issues/220
  [maurits]

- Allow translation of email's subject.
  Fixes http://plone.org/products/poi/issues/219
  [kdeldycke]

- Made the restricted state the initial state of a new tracker.
  [maurits]


1.2.5 (2009-07-08)
------------------

- Register a basically empty content exporter for issues, as they can
  give unicode errors when making a snapshot in portal_setup.  See
  http://plone.org/products/poi/issues/217
  [maurits]

- Added missing strings in german translation
  [jensens]

- Explicitly depend on Products.DataGridField >= 1.6b3 as that is the
  first pypi release.  That release has a GS profile (that we depend
  on in our metadata.xml) and it has the isDataGridFilled validator
  (that we now remove from Poi).  Removed DataGridField from the quick
  installer dependencies as we indeed now list this dependency in